force-app/main/default/objects/DominioCertificacao__c/DominioCertificacao__c.object-meta.xml
<CustomObject>
    <label>Domínio da Certificação</label>
    <nameField>
        <label>Nome do Domínio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domínios da Certificação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>