force-app/main/default/objects/DominioCertificacao__c/fields/Certificacao__c.field-meta.xml
<CustomField>
    <fullName>Certificacao__c</fullName>
    <label>Certificação</label>
    <referenceTo>Certificacao__c</referenceTo>
    <relationshipLabel>Domínios</relationshipLabel>
    <relationshipName>Dominios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>