force-app/main/default/objects/DominioCertificacao__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <length>20</length>
    <type>Text</type>
</CustomField>