force-app/main/default/objects/DominioCertificacao__c/fields/OrdemExibicao__c.field-meta.xml
<CustomField>
    <fullName>OrdemExibicao__c</fullName>
    <label>Ordem de Exibição</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>