force-app/main/default/objects/DominioCertificacao__c/fields/PesoProva__c.field-meta.xml
<CustomField>
    <fullName>PesoProva__c</fullName>
    <label>Peso na Prova (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>